# mcpax

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
docs/: 01_project_charter.md  02_system_overview.md  03_requirements_list.md  04_user_scenarios.md  05_conceptual_data_model.md  06_ui_definition.md  07_function_definition.md  08_data_definition.md  09_crud_matrix.md  10_summary.md  11_architecture.md  modrinth-api.md  requirements.md
src/mcpax/: __init__.py  py.typed
src/mcpax/cli/: __init__.py  app.py
src/mcpax/core/: __init__.py  api.py  cache.py  config.py  downloader.py  exceptions.py  manager.py  models.py
src/mcpax/tui/: __init__.py  app.py
src/mcpax/tui/screens/: __init__.py  detail.py  main.py  search.py
src/mcpax/tui/styles/: __init__.py  app.tcss
src/mcpax/tui/widgets/: __init__.py  progress_panel.py  project_table.py  search_input.py  search_result_table.py  status_bar.py
tests/: __init__.py  conftest.py
tests/fixtures/: config.toml  projects.toml
tests/integration/: __init__.py
tests/unit/: __init__.py  test_api.py  test_cli.py  test_config.py  test_downloader.py  test_exceptions.py  test_manager.py  test_models.py
tests/unit/tui/: test_app.py  test_init.py  test_styles.py
tests/unit/tui/screens/: __init__.py  test_detail.py  test_main.py  test_search.py
tests/unit/tui/widgets/: test_progress_panel.py  test_project_table.py  (+3 more)
