[project]
name = "mcpax"
version = "0.1.0"
description = "Minecraft MOD/Shader/Resource Pack manager via Modrinth API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "kk6" }]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "ty>=0.0.1a6",
    "pre-commit>=4.0",
]
tui = ["textual>=0.50"]

[project.scripts]
mcpax = "mcpax.cli.app:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["integration: marks tests as integration tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpax"]
